# SudokuVS

./: .gitignore  CMakeLists.txt  DifficultyPage.qml  Main.qml  README.md  SudokuBoard.qml  deploy_server.sh  main.cpp  resources.qrc  sudokuhelper.cpp  sudokuhelper.h
Client/: CMakeLists.txt  Main.qml  clientgamemanager.cpp  clientgamemanager.h  clientmessageprocessor.cpp  clientmessageprocessor.h  clienttcphandler.cpp  clienttcphandler.h  main.cpp  resources.qrc  sudokuclient.cpp  sudokuclient.h  sudokuhelper.cpp
Client/qml/: ButtonComponent.qml  DarkTheme.qml  DifficultyPage.qml  GameButton.qml  JoinLobbyScreen.qml  LobbyScreen.qml  SudokuBoard.qml  SudokuLossPopup.qml  SudokuPausePopup.qml  SudokuQuitPopup.qml  SudokuTextField.qml  SudokuVSBoard.qml  VersusOptionsPage.qml  WelcomePage.qml
Client/qml/components/: GameButton.qml  SudokuTextField.qml
Client/qml/screens/: DifficultyPage.qml  JoinLobbyScreen.qml  LobbyScreen.qml  SudokuBoard.qml  SudokuLossPopup.qml  SudokuOpponentQuitPopup.qml  SudokuQuitPopup.qml  SudokuVSBoard.qml  SudokuWinPopup.qml  VersusOptionsPage.qml  WelcomePage.qml
Client/utils/res/: sudoku2.txt
MobileClient/: CMakeLists.txt  Main.qml  clientgamemanager.cpp  clientgamemanager.h  main.cpp  resources.qrc  sudokuhelper.cpp  sudokuhelper.h
MobileClient/qml/: CustomBorder.qml  LobbyScreen.qml  SudokuBoard.qml  SudokuOpponentQuitPopup.qml  SudokuVSBoard.qml  WelcomePage.qml
MobileClient/qml/components/: SudokuNumButton.qml  SudokuTextField.qml
MobileClient/qml/screens/: DifficultyPage.qml  JoinLobbyScreen.qml  LobbyScreen.qml  SudokuBoard.qml  SudokuLossPopup.qml  SudokuPausePopup.qml  SudokuVSBoard.qml  SudokuWinPopup.qml  WelcomePage.qml
Server/: CMakeLists.txt  copy_libraries.sh  deploy.sh  main.cpp  servergamelobbyhandler.cpp  servergamelobbyhandler.h  servergamemanager.cpp  servergamemanager.h  servermessageprocessor.cpp  servermessageprocessor.h  servertcphandler.cpp  servertcphandler.h  sudokuhelper.cpp  sudokuserver.cpp  sudokuserver.h
Server/Utils/includes/: sudokuhelper.h
Server/Utils/src/: sudokuhelper.cpp
Server/deploy/: appSudokuVSServer.sh
Utils/: config.h.in
Utils/databases/: sudoku.db
Utils/includes/: sudokuhelper.h
Utils/src/: sudokuhelper.cpp
qml/: DifficultyPage.qml  SudokuBoard.qml  SudokuLossPopup.qml  SudokuNumButton.qml  SudokuPopup.qml  SudokuTextField.qml  WelcomePage.qml
